--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         <ul class="description-ul">
           <li class="description-li">
             <div class="icons">
-              <svg width="70" height="70">
-                <use href="./images/symbol-defs.svg#icon-Vector"></use>
+              <svg width="64" height="64">
+                <use href="./images/icons.svg#icon-Vector"></use>
               </svg>
             </div>
             <h3 class="description-header">Strategy</h3>
@@ -78,8 +78,8 @@
 
           <li class="description-li">
             <div class="icons">
-              <svg width="70" height="70">
-                <use href="./images/symbol-defs.svg#icon-Vector-1"></use>
+              <svg width="64" height="64">
+                <use href="./images/icons.svg#icon-Vector-1"></use>
               </svg>
             </div><h3 class="description-header">Punctuality</h3>
             <p class="description-text">
@@ -89,8 +89,8 @@
           </li>
           <li class="description-li">
             <div class="icons">
-              <svg width="70" height="70">
-                <use href="./images/symbol-defs.svg#icon-Vector-3"></use>
+              <svg width="64" height="64">
+                <use href="./images/icons.svg#icon-Vector-3"></use>
               </svg>
             </div>
             <h3 class="description-header">Diligence</h3>
@@ -101,8 +101,8 @@
           </li>
           <li class="description-li">
             <div class="icons">
-              <svg width="70" height="70">
-                <use href="./images/symbol-defs.svg#icon-astronaut-1"></use>
+              <svg width="64" height="64">
+                <use href="./images/icons.svg#icon-astronaut-1"></use>
               </svg>
             </div>
             <h3 class="description-header">Technologies</h3>
@@ -131,28 +131,28 @@
                   <li class="icon item">
                     <a class="social link" href="">
                       <svg class="center" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
                       <svg class="center" width="20" height="20" viewBox="0 0 20 20">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
                       <svg class="center" width="20" height="20" viewBox="0 0 20 20">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
                       <svg class="center" width="20" height="20" viewBox="0 0 20 20">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -170,28 +170,28 @@
                   <li class="icon item">
                     <a class="social link" href="">
                       <svg class="center" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
                       <svg class="center" width="20" height="20" viewBox="0 0 20 20">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
                       <svg class="center" width="20" height="20" viewBox="0 0 20 20">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
                       <svg class="center" width="20" height="20" viewBox="0 0 20 20">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -209,28 +209,28 @@
                   <li class="icon item">
                     <a class="social link" href="">
                       <svg class="center" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
                       <svg class="center" width="20" height="20" viewBox="0 0 20 20">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
                       <svg class="center" width="20" height="20" viewBox="0 0 20 20">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
                       <svg class="center" width="20" height="20" viewBox="0 0 20 20">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -248,28 +248,28 @@
                   <li class="icon item">
                     <a class="social link" href="">
                       <svg class="center" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
                       <svg class="center" width="20" height="20" viewBox="0 0 20 20">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
                       <svg class="center" width="20" height="20" viewBox="0 0 20 20">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
                       <svg class="center" width="20" height="20" viewBox="0 0 20 20">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
