--- a/index.html
+++ b/index.html
@@ -130,28 +130,28 @@
                 <ul class="icons list">
                   <li class="icon item">
                     <a class="social link" href="">
-                      <svg class="center" width="20" height="20">
+                      <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
-                      <svg class="center" width="20" height="20" viewBox="0 0 20 20">
+                      <svg class="center" width="16" height="16" viewBox="0 0 20 20">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
-                      <svg class="center" width="20" height="20" viewBox="0 0 20 20">
+                      <svg class="center" width="16" height="16" viewBox="0 0 20 20">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
-                      <svg class="center" width="20" height="20" viewBox="0 0 20 20">
+                      <svg class="center" width="16" height="16" viewBox="0 0 20 20">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -169,28 +169,28 @@
                 <ul class="icons list">
                   <li class="icon item">
                     <a class="social link" href="">
-                      <svg class="center" width="20" height="20">
+                      <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
-                      <svg class="center" width="20" height="20" viewBox="0 0 20 20">
+                      <svg class="center" width="16" height="16" viewBox="0 0 20 20">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
-                      <svg class="center" width="20" height="20" viewBox="0 0 20 20">
+                      <svg class="center" width="16" height="16" viewBox="0 0 20 20">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
-                      <svg class="center" width="20" height="20" viewBox="0 0 20 20">
+                      <svg class="center" width="16" height="16" viewBox="0 0 20 20">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -208,28 +208,28 @@
                 <ul class="icons list">
                   <li class="icon item">
                     <a class="social link" href="">
-                      <svg class="center" width="20" height="20">
+                      <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
-                      <svg class="center" width="20" height="20" viewBox="0 0 20 20">
+                      <svg class="center" width="16" height="16" viewBox="0 0 20 20">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
-                      <svg class="center" width="20" height="20" viewBox="0 0 20 20">
+                      <svg class="center" width="16" height="16" viewBox="0 0 20 20">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
-                      <svg class="center" width="20" height="20" viewBox="0 0 20 20">
+                      <svg class="center" width="16" height="16" viewBox="0 0 20 20">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -247,28 +247,28 @@
                 <ul class="icons list">
                   <li class="icon item">
                     <a class="social link" href="">
-                      <svg class="center" width="20" height="20">
+                      <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
-                      <svg class="center" width="20" height="20" viewBox="0 0 20 20">
+                      <svg class="center" width="16" height="16" viewBox="0 0 20 20">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
-                      <svg class="center" width="20" height="20" viewBox="0 0 20 20">
+                      <svg class="center" width="16" height="16" viewBox="0 0 20 20">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
-                      <svg class="center" width="20" height="20" viewBox="0 0 20 20">
+                      <svg class="center" width="16" height="16" viewBox="0 0 20 20">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -341,7 +341,8 @@
     <footer class="footer">
 
           <!-- footertext -->
-      <div class="container">
+      <div class="footer-container">
+        <div class="footer1"></div>
       <a href="./index.html" class="logo-footer">WEB<span class="studio">Studio</span> </a>
       <p class="text">
         Increase the flow of customers and sales for your business with digital
