--- a/index.html
+++ b/index.html
@@ -137,21 +137,21 @@
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
-                      <svg class="center" width="16" height="16" viewBox="0 0 20 20">
+                      <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
-                      <svg class="center" width="16" height="16" viewBox="0 0 20 20">
+                      <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
-                      <svg class="center" width="16" height="16" viewBox="0 0 20 20">
+                      <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -176,21 +176,21 @@
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
-                      <svg class="center" width="16" height="16" viewBox="0 0 20 20">
+                      <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
-                      <svg class="center" width="16" height="16" viewBox="0 0 20 20">
+                      <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
-                      <svg class="center" width="16" height="16" viewBox="0 0 20 20">
+                      <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -215,21 +215,21 @@
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
-                      <svg class="center" width="16" height="16" viewBox="0 0 20 20">
+                      <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
-                      <svg class="center" width="16" height="16" viewBox="0 0 20 20">
+                      <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
-                      <svg class="center" width="16" height="16" viewBox="0 0 20 20">
+                      <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -254,21 +254,21 @@
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
-                      <svg class="center" width="16" height="16" viewBox="0 0 20 20">
+                      <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
-                      <svg class="center" width="16" height="16" viewBox="0 0 20 20">
+                      <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon item">
                     <a class="social link" href="">
-                      <svg class="center" width="16" height="16" viewBox="0 0 20 20">
+                      <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -289,42 +289,60 @@
 
         <ul class="ul-images">
           <li class="portfolio-li">
+                <div class="image-container">
                 <img src="./images/photo1.jpg" alt="Banking App Interface Concept" width="360">
+                <p class="image-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App </p>
+                </div>
                 <div class="container-portfolio">
                 <h3 class="porthead">Banking App</h3>
                 <p class="portfolio-style">App</p>
                 </div>
         </li>
         <li class="portfolio-li">
+                <div class="image-container">
                 <img src="./images/photo2.jpg" alt="Cashless Payment" width="360">
+                <p class="image-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="container-portfolio">
                 <h3 class="porthead">Cashless Payment</h3>
                 <p class="portfolio-style">Marketing</p>
                 </div>
         </li>
         <li class="portfolio-li">
+                <div class="image-container">
                 <img src="./images/photo3.jpg" alt="Meditation App" width="360">
+                <p class="image-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="container-portfolio">
                 <h3 class="porthead">Meditation App</h3>
                 <p class="portfolio-style">App</p>
                 </div>
         </li>
         <li class="portfolio-li">
+                <div class="image-container">
                 <img src="./images/photo4.jpg" alt="Taxi Service" width="360">
+                <p class="image-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="container-portfolio">
                 <h3 class="porthead">Taxi Service</h3>
                 <p class="portfolio-style">Marketing</p>
                 </div>
         </li>
         <li class="portfolio-li">
+                <div class="image-container"> 
                 <img src="./images/photo5.jpg" alt="Screen Illustrations" width="360">
+                <p class="image-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="container-portfolio">
                 <h3 class="porthead">Screen Illustrations</h3>
                 <p class="portfolio-style">Design</p>
                 </div>
         </li>
         <li class="portfolio-li">
+                <div class="image-container">
                 <img src="./images/photo6.jpg" alt="Online Courses" width="360">
+                <p class="image-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="container-portfolio">
                 <h3 class="porthead">Online Courses</h3>
                 <p class="portfolio-style">Marketing</p>
@@ -342,7 +360,7 @@
 
           <!-- footertext -->
       <div class="footer-container">
-        <div class="footer1"></div>
+        <div class="footer1">
       <a href="./index.html" class="logo-footer">WEB<span class="studio">Studio</span> </a>
       <p class="text">
         Increase the flow of customers and sales for your business with digital
@@ -350,37 +368,38 @@
       </p>
       </div>
       <div class="social-block">
-        <h2 class="social-title">Social media</h2>
-        <ul class="icons list">
-          <li class="icon item">
-            <a class="social link" href="">
-              <svg class="center" width="40px" height="40px">
+        <p class="social-title">Social media</p>
+        <ul class="icons-list">
+          <li class="iconitem">
+            <a class="social-link" href="">
+              <svg class="center" width="24" height="24">
                 <use href="./images/sprite.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
-          <li class="icon item">
-            <a class="social link" href="">
-              <svg class="center" width="40px" height="40px" viewBox="0 0 20 20">
+          <li class="iconitem">
+            <a class="social-link" href="">
+              <svg class="center" width="24" height="24">
                 <use href="./images/sprite.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
-          <li class="icon item">
-            <a class="social link" href="">
-              <svg class="center" width="40px" height="40px" viewBox="0 0 20 20">
+          <li class="iconitem">
+            <a class="social-link" href="">
+              <svg class="center" width="24" height="24">
                 <use href="./images/sprite.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
-          <li class="icon item">
-            <a class="social link" href="">
-              <svg class="center" width="40px" height="40px" viewBox="0 0 20 20">
+          <li class="iconitem">
+            <a class="social-link" href="">
+              <svg class="center" width="24" height="24">
                 <use href="./images/sprite.svg#icon-linkedin"></use>
               </svg>
             </a>
           </li>
         </ul>
+      </div>
       </div>
     </footer>
   </body>
