--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="/" class="logo">WEB<span class="web">Studio</span></a>
 
         <ul class="site">
-          <li><a href="./index.html" class="link">Studio</a></li>
+          <li><a href="./index.html" class="currentlink">Studio</a></li>
 
           <li><a href="" class="link">Portfolio</a></li>
 
