--- a/index.html
+++ b/index.html
@@ -128,28 +128,28 @@
                 <h3 class="team-header-name">Mark Guerrero</h3> 
                 <p class="team-text-name">Product Designer</p>
                 <ul class="icons list">
-                  <li class="icon item">
+                  <li class="socialmedia">
                     <a class="social link" href="">
                       <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icon item">
+                  <li class="socialmedia">
                     <a class="social link" href="">
                       <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icon item">
+                  <li class="socialmedia">
                     <a class="social link" href="">
                       <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icon item">
+                  <li class="socialmedia">
                     <a class="social link" href="">
                       <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -167,28 +167,28 @@
                 <h3 class="team-header-name">Tom Ford </h3>
                 <p class="team-text-name">Frontend Developer</p>
                 <ul class="icons list">
-                  <li class="icon item">
+                  <li class="socialmedia">
                     <a class="social link" href="">
                       <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icon item">
+                  <li class="socialmedia">
                     <a class="social link" href="">
                       <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icon item">
+                  <li class="socialmedia">
                     <a class="social link" href="">
                       <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icon item">
+                  <li class="socialmedia">
                     <a class="social link" href="">
                       <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -206,28 +206,28 @@
                 <h3 class="team-header-name"> Camila Garcia </h3>
                 <p class="team-text-name">Marketing</p>
                 <ul class="icons list">
-                  <li class="icon item">
+                  <li class="socialmedia">
                     <a class="social link" href="">
                       <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icon item">
+                  <li class="socialmedia">
                     <a class="social link" href="">
                       <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icon item">
+                  <li class="socialmedia">
                     <a class="social link" href="">
                       <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icon item">
+                  <li class="socialmedia">
                     <a class="social link" href="">
                       <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -245,28 +245,28 @@
                <h3 class="team-header-name">Daniel Wilson</h3> 
                 <p class="team-text-name">UI Designer</p> 
                 <ul class="icons list">
-                  <li class="icon item">
+                  <li class="socialmedia">
                     <a class="social link" href="">
                       <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icon item">
+                  <li class="socialmedia">
                     <a class="social link" href="">
                       <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icon item">
+                  <li class="socialmedia">
                     <a class="social link" href="">
                       <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icon item">
+                  <li class="socialmedia">
                     <a class="social link" href="">
                       <svg class="center" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
