--- a/index.html
+++ b/index.html
@@ -373,28 +373,28 @@
           <li class="iconitem">
             <a class="social-link" href="">
               <svg class="center" width="24" height="24">
-                <use href="./images/sprite.svg#icon-instagram"></use>
+                <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="iconitem">
             <a class="social-link" href="">
               <svg class="center" width="24" height="24">
-                <use href="./images/sprite.svg#icon-twitter"></use>
+                <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
           <li class="iconitem">
             <a class="social-link" href="">
               <svg class="center" width="24" height="24">
-                <use href="./images/sprite.svg#icon-facebook"></use>
+                <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="iconitem">
             <a class="social-link" href="">
               <svg class="center" width="24" height="24">
-                <use href="./images/sprite.svg#icon-linkedin"></use>
+                <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
             </a>
           </li>
